// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`C10 §4k — the compositions, as frames > case 1 — focused + selected + failed, at 1-bit 1`] = `
"-- the frame
    Name          State     
    alpha         ✓ running 
  ▸ bravo         ✗ failed  
    charlie       ✓ running 

-- which fact took the ground, run by run
  dim/-:"Name        " dim/-:"State     "
  page/-:"  alpha         " bold/-:"✓ running "
  bold/-:"▸ " inverse/-:"bravo         " inverse+bold/-:"✗ failed  "
  page/-:"  charlie       " bold/-:"✓ running "

-- the ruling (C10 §4k.2 row 1)
  selection takes the ground · focus keeps its mark · failure keeps its glyph, its word and its tone

-- and what drawing it found, kept because the record is the point (F1240)
  This frame reported two of row 1's three clauses for as long as it existed. A focused or
  selected row was repainted in ONE ink — accent, or default under selection — so \`failed\` kept
  ✗ and the word and lost the error tone. The two halves of the remedy were one change and
  neither worked alone: C11 I14's drop-to-one-ink rule, and a painter that resolves a tone
  against the surface it lands on. \`inkOn\` was that resolver and was called only from
  \`contrast.ts\` — 74 of 100 tone x surface pairs were an ink the gate checked and the painter
  never emitted. C10 I48 gives \`resolve\` the ground, \`inkOn\` is its composition step, and the
  ink beside each ground above is the value C10 T2.49 measures the gate against."
`;

exports[`C10 §4k — the compositions, as frames > case 1 — focused + selected + failed, at 24-bit 1`] = `
"-- the frame
    Name          State     
    alpha         ✓ running 
  ▸ bravo         ✗ failed  
    charlie       ✓ running 

-- which fact took the ground, run by run
  page/muted:"Name        " page/muted:"State     "
  page/default:"alpha       " page/ok:"✓ running "
  page/accent:"▸ " selection/default:"bravo       " selection/error:"✗ failed  "
  page/default:"charlie     " page/ok:"✓ running "

-- the ruling (C10 §4k.2 row 1)
  selection takes the ground · focus keeps its mark · failure keeps its glyph, its word and its tone

-- and what drawing it found, kept because the record is the point (F1240)
  This frame reported two of row 1's three clauses for as long as it existed. A focused or
  selected row was repainted in ONE ink — accent, or default under selection — so \`failed\` kept
  ✗ and the word and lost the error tone. The two halves of the remedy were one change and
  neither worked alone: C11 I14's drop-to-one-ink rule, and a painter that resolves a tone
  against the surface it lands on. \`inkOn\` was that resolver and was called only from
  \`contrast.ts\` — 74 of 100 tone x surface pairs were an ink the gate checked and the painter
  never emitted. C10 I48 gives \`resolve\` the ground, \`inkOn\` is its composition step, and the
  ink beside each ground above is the value C10 T2.49 measures the gate against."
`;

exports[`C10 §4k — the compositions, as frames > case 1 — focused + selected + failed, at ascii 1`] = `
"-- the frame
    Name          State     
    alpha         + running 
  > bravo         x failed  
    charlie       + running 

-- which fact took the ground, run by run
  page/muted:"Name        " page/muted:"State     "
  page/default:"alpha       " page/ok:"+ running "
  page/accent:"> " selection/default:"bravo       " selection/error:"x failed  "
  page/default:"charlie     " page/ok:"+ running "

-- the ruling (C10 §4k.2 row 1)
  selection takes the ground · focus keeps its mark · failure keeps its glyph, its word and its tone

-- and what drawing it found, kept because the record is the point (F1240)
  This frame reported two of row 1's three clauses for as long as it existed. A focused or
  selected row was repainted in ONE ink — accent, or default under selection — so \`failed\` kept
  ✗ and the word and lost the error tone. The two halves of the remedy were one change and
  neither worked alone: C11 I14's drop-to-one-ink rule, and a painter that resolves a tone
  against the surface it lands on. \`inkOn\` was that resolver and was called only from
  \`contrast.ts\` — 74 of 100 tone x surface pairs were an ink the gate checked and the painter
  never emitted. C10 I48 gives \`resolve\` the ground, \`inkOn\` is its composition step, and the
  ink beside each ground above is the value C10 T2.49 measures the gate against."
`;

exports[`C10 §4k — the compositions, as frames > case 4 — focus over a heatmap, at 1-bit 1`] = `
"-- the frame, focused
    one ┤⠄⠄⠄⠄⠄⠄⠄⠄⠄⠔⠔⠔⠔⠔⠔⠔⠔⠷⠷⠷⠷⠷⠷⠷⠷⣿⣿⣿⣿⣿⣿⣿⣿
    two ┤⣿⣿⣿⣿⣿⣿⣿⣿⣿⠷⠷⠷⠷⠷⠷⠷⠷⠔⠔⠔⠔⠔⠔⠔⠔⠄⠄⠄⠄⠄⠄⠄⠄
  three ┤⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷
  
  1 ⠄⠔⠖⠶⠷⠿⡿⣿ 16

-- at rest, run by run
  dim/-:"  one ┤" page/-:"⠄⠄⠄⠄⠄⠄⠄⠄⠄⠔⠔⠔⠔⠔⠔⠔⠔⠷⠷⠷⠷⠷⠷⠷⠷⣿⣿⣿⣿⣿⣿⣿⣿"
  dim/-:"  two ┤" page/-:"⣿⣿⣿⣿⣿⣿⣿⣿⣿⠷⠷⠷⠷⠷⠷⠷⠷⠔⠔⠔⠔⠔⠔⠔⠔⠄⠄⠄⠄⠄⠄⠄⠄"
  dim/-:"three ┤" page/-:"⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷"
  (blank)
  dim/-:"1 ⠄⠔⠖⠶⠷⠿⡿⣿ 16"

-- focused, run by run
  dim/-:"  one ┤" page/-:"⠄⠄⠄⠄⠄⠄⠄⠄⠄⠔⠔⠔⠔⠔⠔⠔⠔⠷⠷⠷⠷⠷⠷⠷⠷⣿⣿⣿⣿⣿⣿⣿⣿"
  dim/-:"  two ┤" page/-:"⣿⣿⣿⣿⣿⣿⣿⣿⣿⠷⠷⠷⠷⠷⠷⠷⠷⠔⠔⠔⠔⠔⠔⠔⠔⠄⠄⠄⠄⠄⠄⠄⠄"
  dim/-:"three ┤" page/-:"⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠔⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷⠷"
  (blank)
  dim/-:"1 ⠄⠔⠖⠶⠷⠿⡿⣿ 16"

-- the ruling (C10 §4k.2 row 4, R-FOC-004)
  nothing is contested · the border and the axes take the focus · the data keeps its reading"
`;

exports[`C10 §4k — the compositions, as frames > case 4 — focus over a heatmap, at 24-bit 1`] = `
"-- the frame, focused
    one ┤                                 
    two ┤                                 
  three ┤                                 
  
  1          16

-- at rest, run by run
  page/muted:"  one ┤"
  page/muted:"  two ┤"
  page/muted:"three ┤"
  (blank)
  page/muted:"1 " page/muted:" 16"

-- focused, run by run
  page/muted:"  one ┤"
  page/muted:"  two ┤"
  page/muted:"three ┤"
  (blank)
  page/muted:"1 " page/muted:" 16"

-- the ruling (C10 §4k.2 row 4, R-FOC-004)
  nothing is contested · the border and the axes take the focus · the data keeps its reading"
`;

exports[`C10 §4k — the compositions, as frames > case 4 — focus over a heatmap, at ascii 1`] = `
"-- the frame, focused
    one +                                 
    two +                                 
  three +                                 
  
  1          16

-- at rest, run by run
  page/muted:"  one +"
  page/muted:"  two +"
  page/muted:"three +"
  (blank)
  page/muted:"1 " page/muted:" 16"

-- focused, run by run
  page/muted:"  one +"
  page/muted:"  two +"
  page/muted:"three +"
  (blank)
  page/muted:"1 " page/muted:" 16"

-- the ruling (C10 §4k.2 row 4, R-FOC-004)
  nothing is contested · the border and the axes take the focus · the data keeps its reading"
`;
